--- a/index.html
+++ b/index.html
@@ -35,22 +35,22 @@
          </header>
          <div id="box_content">
             <h2 class="movie-title-01">愛情不搬家 Romance Remove</h2>
-            <!--<div id="box_file">
-               <a  class="fancybox-media" href="https://www.youtube.com/watch?v=hygSSE9P5m4&feature=youtu.be" title="[影片播放] 幸福小距離">[影片播放] 幸福小距離</a>
-            </div>-->
-            <h3>有你在的地方，幸福原來離我們這麼近...</h3>
+            <div class="btn_play-01">
+               <a  class="fancybox-media" href="https://www.youtube.com/watch?v=Dl1SRQbqAr8" title="[影片播放] 愛情不搬家">[影片播放] 愛情不搬家</a>
+            </div>
+            <h3>合法營業貨車，安心有保障</h3>
             <h2 class="movie-title-02">幸福請簽收 Sign Your Name In My Heart</h2>
-            <!--<div id="box_file">
-               <a  class="fancybox-media" href="https://www.youtube.com/watch?v=hygSSE9P5m4&feature=youtu.be" title="[影片播放] 幸福小距離">[影片播放] 幸福小距離</a>
-            </div>-->
-            <!--<nav id="box_menu">
+            <div class="btn_play-02">
+               <a  class="fancybox-media" href="https://www.youtube.com/watch?v=lsSMxi8Xk7o" title="[影片播放] 幸福請簽收">[影片播放] 幸福請簽收</a>
+            </div>
+            <nav id="box_menu">
                <ul>
                   <li><a href="story.html" class="nav_01">劇情介紹</a></li>
                   <li><a href="profile.html" class="nav_02">單位簡介</a></li>
-                  <li><a href="stills.html" class="nav_03" style="margin-left:90px">劇照花絮</a></li>
+                  <li><a href="stills.html" class="nav_03">劇照花絮</a></li>
                   <li><a href="link.html" class="nav_04">相關連結</a></li>
                </ul>
-            </nav>-->
+            </nav>
             <div id="main-vision"></div>
             <div id="truck"></div>
          </div>
