單位簡介+相關連結頁面完成 #20150814

--- a/profile.html
+++ b/profile.html
@@ -54,29 +54,28 @@
               <!-- InstanceBeginEditable name="PageMine" -->
               <div id="box_pagemain">
                 <section id="box_pageinfo" class="page_story">
-                  <div id="bar_title"> <span></span>
-                    <h3 class="title_03">單位簡介</h3>
-                  </div>
-                  <!--<a class="fancybox-media btn_play" href="https://www.youtube.com/watch?v=hygSSE9P5m4&feature=youtu.be" title="[影片播放] 幸福小距離">[影片播放] 幸福小距離</a>
-                    <div class="story_main">
-                      <p style="text-indent:15px">從江蘇嫁來台灣的年輕媽媽江敏跟其他就業婦女一樣，在工作與家庭之間兩頭燒。她正面臨生命中最忙碌的一天，就讀國小的女兒妮妮生日，在安親班等著她下班接送。但她得先處理好公司的客戶，沒想到客戶竟心臟病發。幸好安親班的工友奶奶鍾梅留下來照料妮妮，這一老一小竟有聊不完的話。就在妮妮快要對媽媽失去信心的時候，江敏終於狼狽出現，母女倆緊緊擁抱。江敏跟鍾梅大力道謝，鍾梅則輕描淡寫地說她完全理解江敏的心境。跨越兩個世代的江蘇媳婦，在此溫暖交心。</p>
-                    </div>-->
-                  <!--<div class="box_actor">
-                      <ul>
-                        <li> <img src="images/pic_actor-01.jpg" alt="*">
-                          <h4>江敏</h4>
-                          <p>女，約30歲，從江蘇嫁來台灣，個性熱情負責，上班族，育有一女。</p>
-                        </li>
-                        <li> <img src="images/pic_actor-02.jpg" alt="*">
-                          <h4>妮妮</h4>
-                          <p>女，約7歲，國小一年級，個性倔強、成熟。</p>
-                        </li>
-                        <li> <img src="images/pic_actor-03.jpg" alt="*">
-                          <h4>鍾梅</h4>
-                          <p>女，約50歲，早年從江蘇嫁來台灣，個性純樸善良，在安親班當工友</p>
-                        </li>
-                      </ul>
-                    </div>-->
+                   <div id="bar_title"> <span></span>
+                      <h3 class="title_03">單位簡介</h3>
+                   </div>
+                   
+                   <section id="box_main">
+                       <div class="box_profile">
+                          <p>公路監理業務與民眾生活息息相關，為提升服務品質，以「安全、便捷、舒適、經濟、親切」為願景；「廉正、忠誠、專業、效能、關懷」為核心價值；「親近弱勢 關懷備至、流程改善 節能減碳、延伸時地 提升滿意、親切快速 貼心服務」為策略，積極推動各項簡政便民措施，期以拉近與民眾的距離，具體落實親民、便民、簡政、防弊業務，樹立專業及高效率便捷服務新風貌。</p>
+                        </div>
+                        
+                        <div class="box_service">
+                           <h4>【呼籲消費者勿使用白牌貨車違規營業】</h4>
+                           <p>民眾搬家情況增多，由於常有消費者搬家時與搬家業者發生糾紛，甚至申訴無門，為讓消費者容易識別及雇用合法搬家業，合法搬家業者會張貼於車輛擋風玻璃供消費者辨識，監理所提供以下幾點注意事項：</p>
+                           <ol>
+                              <li>合法的貨運業者應使用綠底白字的車牌</li>
+                              <li>注意是否具有公司執照及貨運營業執照</li>
+                              <li>駕駛應有職業大貨車駕照</li>
+                              <li>消費者應與業者簽訂托運契約</li>
+                              <li>監警聯合取締非法違規營業，保障合法業者權益</li>
+                           </ol>
+                           <br class="clean"> 
+                        </div>
+                  </section>
                 </section>
               </div>
               <br class="clean">
