--- a/link.html
+++ b/link.html
@@ -57,26 +57,19 @@
                   <div id="bar_title"> <span></span>
                     <h3 class="title_04">相關連結</h3>
                   </div>
-                  <!--<a class="fancybox-media btn_play" href="https://www.youtube.com/watch?v=hygSSE9P5m4&feature=youtu.be" title="[影片播放] 幸福小距離">[影片播放] 幸福小距離</a>
-                    <div class="story_main">
-                      <p style="text-indent:15px">從江蘇嫁來台灣的年輕媽媽江敏跟其他就業婦女一樣，在工作與家庭之間兩頭燒。她正面臨生命中最忙碌的一天，就讀國小的女兒妮妮生日，在安親班等著她下班接送。但她得先處理好公司的客戶，沒想到客戶竟心臟病發。幸好安親班的工友奶奶鍾梅留下來照料妮妮，這一老一小竟有聊不完的話。就在妮妮快要對媽媽失去信心的時候，江敏終於狼狽出現，母女倆緊緊擁抱。江敏跟鍾梅大力道謝，鍾梅則輕描淡寫地說她完全理解江敏的心境。跨越兩個世代的江蘇媳婦，在此溫暖交心。</p>
-                    </div>-->
-                  <!--<div class="box_actor">
-                      <ul>
-                        <li> <img src="images/pic_actor-01.jpg" alt="*">
-                          <h4>江敏</h4>
-                          <p>女，約30歲，從江蘇嫁來台灣，個性熱情負責，上班族，育有一女。</p>
-                        </li>
-                        <li> <img src="images/pic_actor-02.jpg" alt="*">
-                          <h4>妮妮</h4>
-                          <p>女，約7歲，國小一年級，個性倔強、成熟。</p>
-                        </li>
-                        <li> <img src="images/pic_actor-03.jpg" alt="*">
-                          <h4>鍾梅</h4>
-                          <p>女，約50歲，早年從江蘇嫁來台灣，個性純樸善良，在安親班當工友</p>
-                        </li>
-                      </ul>
-                    </div>-->
+                  
+                  <section id="box_main">
+                     <div class="box_link">
+                        <ul>
+                            <li><a href="https://www.youtube.com/watch?v=hygSSE9P5m4&feature=youtu.be" title="Youtube" rel="external">Youtube</a>
+                                 <h4>Youtube<br>影片播放</h4></li>
+                            <li><a class="icon-office" href="http://tmv.thb.gov.tw/" title="中華民國交通部公路總局台中區監理所" rel="external">中華民國交通部公路總局台中區監理所</a>
+                                <h4>交通部公路總局<br>台中區監理所</h4></li>
+                        </ul>
+                        <br class="clean">
+                     </div>
+                  </section>
+                  
                 </section>
               </div>
               <br class="clean">
