--- a/story.html
+++ b/story.html
@@ -74,7 +74,7 @@
                                   <div class="box_actor">
                                     <ul>
                                       <li> <img src="images/pic_people-04.png" alt="*">
-                                        <h4>阿明</h4>
+                                        <h4>歐明倫</h4>
                                         <p>男，約25歲，剛與女友緯緯分手，愛面子，個性迷糊懦弱。</p>
                                       </li>
                                       <li> <img src="images/pic_people-05.png" alt="*">
@@ -102,11 +102,11 @@
                                         <p>女，約25歲，剛升上服飾店店長，個性認真。</p>
                                       </li>
                                       <li> <img src="images/pic_people-02.png" alt="*">
-                                        <h4>阿明</h4>
+                                        <h4>歐明倫</h4>
                                         <p>男，約25歲，服飾店店員，個性陽光活潑開朗，跟緯緯有些曖昧。</p>
                                       </li>
                                       <li> <img src="images/pic_people-03.png" alt="*">
-                                        <h4>託運員Ａ</h4>
+                                        <h4>託運員</h4>
                                         <p>男，約35歲，有些脫線，常搞不清處狀況。</p>
                                       </li>
                                     </ul>
