單位簡介錯字更正 #20150819

--- a/profile.html
+++ b/profile.html
@@ -70,7 +70,7 @@
                               <li>合法的貨運業者應使用綠底白字的車牌</li>
                               <li>注意是否具有公司執照及貨運營業執照</li>
                               <li>駕駛應有職業大貨車駕照</li>
-                              <li>消費者應與業者簽訂托運契約</li>
+                              <li>消費者應與業者簽訂託運契約</li>
                               <li>監警聯合取締非法違規營業，保障合法業者權益</li>
                            </ol>
                            <br class="clean"> 
