--- a/story.html
+++ b/story.html
@@ -69,7 +69,7 @@
                               <div id="tab1" class="tab_content">
                                   <h3>【故事大綱】</h3>
                                   <p>阿明跟緯緯分手了，阿明決定搬離這個傷心地。但他自作聰明找了雜牌搬家公司，不只過程慘不忍睹，連最重要的相框都摔壞了。難不成，真的是分手帶來的衰運……？</p>
-                                  <a class="fancybox-media btn_play" href="https://www.youtube.com/watch?v=Dl1SRQbqAr8" title="[影片播放] 愛情不搬家">[影片播放] 愛情不搬家</a>
+                                  <a class="fancybox-media btn_play" href="https://www.youtube.com/watch?v=4QpUavy9ImQ" title="[影片播放] 愛情不搬家">[影片播放] 愛情不搬家</a>
                                   <h3>【人物介紹】</h3>
                                   <div class="box_actor">
                                     <ul>
@@ -93,7 +93,7 @@
                               <div id="tab2" class="tab_content">
                                   <h3>【故事大綱】</h3>
                                   <p>緯緯好不容易升了店長，沒想到第一天就出了大包！白牌貨車送貨大遲到，不只部份貨送錯、還造成貨物毀損……眼見阿明約她晚上慶祝的時間就要到了，這下該怎麼辦呢？</p>
-                                  <a class="fancybox-media btn_play" href="https://www.youtube.com/watch?v=Dl1SRQbqAr8" title="[影片播放] 幸福請簽收">[影片播放] 幸福請簽收</a>
+                                  <a class="fancybox-media btn_play" href="https://www.youtube.com/watch?v=N9T9EdScE2Y" title="[影片播放] 幸福請簽收">[影片播放] 幸福請簽收</a>
                                   <h3>【人物介紹】</h3>
                                   <div class="box_actor">
                                     <ul>
