首頁增加動畫效果 #20150827

--- a/index.html
+++ b/index.html
@@ -34,16 +34,20 @@
             <h1><a href="http://tmv.thb.gov.tw/" rel="external" title="[另開視窗]交通部公路總局臺中區監理所">交通部公路總局臺中區監理所 Directorate General of Highways, Republic of China(Taiwan) </a></h1>
          </header>
          <div id="box_content">
-            <h2 class="movie-title-01">愛情不搬家 Romance Remove</h2>
-            <div class="btn_play-01">
-               <a  class="fancybox-media" href="https://www.youtube.com/watch?v=4QpUavy9ImQ" title="[影片播放] 愛情不搬家">[影片播放] 愛情不搬家</a>
+            <div class="animated box_ani-01">
+                <h2 class="movie-title-01">愛情不搬家 Romance Remove</h2>
+                <div class="btn_play-01">
+                   <a  class="fancybox-media" href="https://www.youtube.com/watch?v=4QpUavy9ImQ" title="[影片播放] 愛情不搬家">[影片播放] 愛情不搬家</a>
+                </div>
+            </div>    
+            <h3 class="animated bounceInRight">合法營業貨車，安心有保障</h3>
+            <div class="animated box_ani-02">
+                  <h2 class="movie-title-02">幸福請簽收 Sign Your Name In My Heart</h2>
+                  <div class="btn_play-02">
+                     <a  class="fancybox-media" href="https://www.youtube.com/watch?v=N9T9EdScE2Y" title="[影片播放] 幸福請簽收">[影片播放] 幸福請簽收</a>
+                  </div>
             </div>
-            <h3>合法營業貨車，安心有保障</h3>
-            <h2 class="movie-title-02">幸福請簽收 Sign Your Name In My Heart</h2>
-            <div class="btn_play-02">
-               <a  class="fancybox-media" href="https://www.youtube.com/watch?v=N9T9EdScE2Y" title="[影片播放] 幸福請簽收">[影片播放] 幸福請簽收</a>
-            </div>
-            <nav id="box_menu">
+            <nav id="box_menu" class="animated fadeIn">
                <ul>
                   <li><a href="story.html" class="nav_01">劇情介紹</a></li>
                   <li><a href="stills.html" class="nav_02">劇照花絮</a></li>
