內頁單元增加動畫轉場 #20150831

--- a/link.html
+++ b/link.html
@@ -58,7 +58,7 @@
                     <h3 class="title_04">相關連結</h3>
                   </div>
                   
-                  <section id="box_main">
+                  <section id="box_main" class="animated fadeIn">
                      <div class="box_link">
                         <ul>
                             <li><a href="https://www.youtube.com/watch?v=N9T9EdScE2Y" title="Youtube" rel="external">Youtube</a>
