--- a/profile.html
+++ b/profile.html
@@ -58,7 +58,7 @@
                       <h3 class="title_03">單位簡介</h3>
                    </div>
                    
-                   <section id="box_main">
+                   <section id="box_main" class="animated fadeIn">
                        <div class="box_profile">
                           <p>公路監理業務與民眾生活息息相關，為提升服務品質，以「安全、便捷、舒適、經濟、親切」為願景；「廉正、忠誠、專業、效能、關懷」為核心價值；「親近弱勢 關懷備至、流程改善 節能減碳、延伸時地 提升滿意、親切快速 貼心服務」為策略，積極推動各項簡政便民措施，期以拉近與民眾的距離，具體落實親民、便民、簡政、防弊業務，樹立專業及高效率便捷服務新風貌。</p>
                         </div>
