--- a/stills.html
+++ b/stills.html
@@ -58,7 +58,7 @@
                       <h3 class="title_02">劇照花絮</h3>
                    </div>
                    
-                   <section id="box_main">
+                   <section id="box_main" class="animated fadeIn">
                       <div class="abgne_tab">
                           <ul class="tabs">
                               <li><a href="#tab1" class="tabs-02">幸福請簽收</a></li>
